# rust-axum-full-course

./: .gitignore  Cargo.toml  api.http  readme.md
src/: ctx.rs  error.rs  lib.rs  log.rs  main.rs  model.rs
src/web/: mw_auth.rs  routes_login.rs  routes_tickets.rs
static/: index.html
tests/: test-hello.rs
