[package]
name = "rust-axum-full-course"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.99"
serde = { version = "1.0.219", features = ["derive"] }
tower = { version = "0.5.2", features = ["tokio", "util"] }
tower-http = { version = "0.6.6", features = ["fs"] }
serde_json = "1.0.143"
tower-cookies = "0.11.0"

[dev-dependencies]
httpc-test = "0.1.10"
